Updated personal informations
Updated personal info, no code changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- Radomír Madej -->
+
+<!-- krepelka.s@seznam.cz -->
+
+<!-- Radek M. -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
